--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="controls">
 			<h1 style="color: rgb(0, 128, 100)">My Awesome To Do</h1>
 			<input type="text" id="input" autofocus >
-			<p style="color:rgb(255, 71, 246)">Enter your todo above</p>
+			<p style="color:rgb(255, 71, 246)">Enter your to-do above</p>
 			<button type="button" id="add">Add To Do</button>
 			<button type="button" id="remove">Remove done To Dos</button>
 			<button type="button" id="removeall">Remove All</button>
