--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     .list-box li {
       list-style: none;
-      border: 2px dashed var(--background-color);
+      border: 1.5px solid var(--background-color);
       color: var(--background-color);
       border-radius: 18px;
       font-size: 1.2rem;
